--- a/Server/.env
+++ b/Server/.env
@@ -1,4 +1,4 @@
 JWT_SECRET=your_jwt_secret_key_1
-MONGO_URI="mongodb+srv://workingajay7:zpCxi98n+E+Uj8C@cluster0.ltre1wp.mongodb.net/user"
-WEATHER_API_KEY="d4e7cde80d49305356e70db5a514deac"
+MONGO_URI="add your mongodb url"
+WEATHER_API_KEY="add your api"
 PORT=5000
